notifikasi salin dan love story

--- a/index.html
+++ b/index.html
@@ -247,6 +247,9 @@
     
     <audio id="background-music" src="sound/muara_adera.mp3" loop></audio>
 
+    <div id="copy-toast" class="toast">
+        Nomor rekening berhasil disalin!
+    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="script.js"></script>
