--- a/index.html
+++ b/index.html
@@ -153,15 +153,15 @@
                         <h2>Love Story</h2>
                         <div>
                             <h5>Pertemuan</h5>
-                            <p>Cinta adalah sesuatu yang tak terduga dan datang tanpa permisi. Termasuk takdir yang mempertemukan kami di tahun 2022 ketika ada pekerjaan di Lhokseumawe.</p>
+                            <p>Tahun 2022, Benar kata mereka, takdir memang menjadi alasan pertemuan, sebuah pertemuan singkat ketika Dinas di kota Lhokseumawe, yang berujung, "ada cerita apa hari ini?"</p>
                         </div>
                         <div>
                             <h5>Pendekatan</h5>
-                            <p>Setelah melakukan beberapa pertemuan dan bertukar cerita, sehingga beberapa waktu pun berlalu, muncullah ketertarikan di antara kami sehingga ingin melanjutkan ke jenjang yang lebih serius.</p>
+                            <p>Seperti pecahan kaca, kami saling merangkai, menembus sekat hingga dekat, dalam restu yang mengantarkan kami untuk melaju menjadi Tuan dan Puan dalam sebuah ikatan jenjang yang lebih serius lagi.</p>
                         </div>
                         <div>
                             <h5>Tunangan & Lamaran</h5>
-                            <p>Sehingga pada bulan April 2025. Saya dan keluarga mendatangi keluarga Mutia dan menyatakan niat baik saya dan keluarga untuk menjadikan Mutia sebagai pendamping hidup saya.</p>
+                            <p>April 2025. Sebuah pertemuan formal yang menyatukan ke 2 anak pertama antara dua keluarga, dan dalam niat baik saya untuk menjadikan Putri kesayangan mereka sebagai pendamping hidup saya..</p>
                         </div>
                     </div>
                 </div>
